--- a/_posts/2024-01-07-giscus.md
+++ b/_posts/2024-01-07-giscus.md
@@ -15,7 +15,7 @@ tags: [Github Blog, Comments, 댓글, giscus]     # TAG names should always be l
  
 ### giscus 다운로드 (내 블로그 Repo에 설치)
 
-먼저 [요기](giscus_registed_url) 로 이동하여서 내 블로그 Repository에 설치해주세요.<br>
+먼저 [요기](https://github.com/apps/giscus) 로 이동하여서 내 블로그 Repository에 설치해주세요.<br>
 > 블로그 URL: [username/username.gituhub.io]
 <br>
 
@@ -52,7 +52,7 @@ New category를 클릭하여 Commenets 카테고리를 생성 해 줍니다. <br
 
 ### giscus와 내 블로그 Repo와 연동
 
-먼저 [요기](discus_app)으로 이동해주세요. <br>
+먼저 [요기](https://giscus.app/ko)으로 이동해주세요. <br>
 
 먼저 본인의 Repo를 입력 해주십니다. <br>
 ![giscus_img](/assets/post/2024-01-07-giscus/giscus_app1.png)
@@ -94,5 +94,7 @@ comments:
     reactions_enabled: # optional, default to the value of `1`
 ```
 
-[giscus_registed_url]: https://github.com/apps/giscus
-[giscus_app]: https://giscus.app/ko
+## 마무리
+
+giscus를 통해 깃 블로그에 댓글 기능을 추가하는 방법에 대해서 포스팅 해봤습니다.<br>
+아직 블로그 초창기라 변경 하고 싶은 부분이 많은데 변경되는 내용에 대해서는 꾸준히 블로그에 기록해보도록 하겠습니다.
