🔧 Github 블로그 댓글 기능[수정

--- a/_posts/2024-01-07-giscus.md
+++ b/_posts/2024-01-07-giscus.md
@@ -21,7 +21,7 @@ tags: [Github Blog, Comments, 댓글, giscus]     # TAG names should always be l
 
 ---
 
-### 블로그에서 Repo에서 Discussions 기능 활성화
+### 블로그 Repo에서 Discussions 기능 활성화
 본인 블로그 Repository의 탭 메뉴의 Settigns > Features에서 Discussions을 활성화 해주시켜주세요.<br>
 
 ![view](/assets/post/2024-01-07-giscus/giscus.png)
@@ -32,7 +32,7 @@ tags: [Github Blog, Comments, 댓글, giscus]     # TAG names should always be l
 
 ---
 
-### 블로그에서 Repo에서 Discussions 설정
+### 블로그 Repo에서 Discussions 설정
 앞에 활성화 된 Disucssions에 들어가서 댓글을 위한 새로운 카테고리를 생성합니다.<br>
 
 ![cateogry](/assets/post/2024-01-07-giscus/categories.png)
